# cosmic-ext-applet-eyedropper

./: .flatpakignore  .gitignore  Cargo.toml  LICENSE  README.md  cosmic-screenshot_0.1.0~1782227672~24.04~d6ef210.dsc  fb_out.txt  gen-sources.py  justfile  regen-sources.py  repro_ctrl.rs  todo.md
.github/workflows/: flatpak.yml  release.yml
.zed/: settings.json
flatpak/: cargo-sources.json  fix-cargo-config.py  fix-sources.py  gen-cargo-sources.py  io.github.nalladev.CosmicExtAppletEyedropper.flatpak.json  io.github.nalladev.CosmicExtAppletEyedropper.json  io.github.nalladev.CosmicExtAppletEyedropper.yml
i18n/cs/: cosmic_ext_applet_eyedropper.ftl
i18n/en/: cosmic_applet_color_picker.ftl
resources/: app.desktop  app.metainfo.xml  install.sh
src/: app.rs  config.rs  main.rs
src/picker/: capture.rs  controller.rs  mod.rs  wayland.rs
src/widget/: keyboard_wrapper.rs  mod.rs
