[package]
name = "cosmic-applet-color-picker"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Colour picker applet for cosmic desktop"
repository = "https://github.com/nalladev/cosmic-applet-color-picker"

[dependencies]
anyhow = "1"
futures-util = "0.3.31"
i18n-embed-fl = "0.10"
image = "0.25"
memmap2 = "0.9"
rust-embed = "8.7.2"
rustix = { version = "1", features = ["fs", "std"] }
tokio = { version = "1.48.0", features = ["full"] }

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
rev = "758c13723fc35b1d82d7fa4f35859c9f7f3c1b0c"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Applet support
    "applet",
    "applet-token",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Add Wayland support to winit
    "wayland",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
