[package]
name = "cosmic-applet-color-picker"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Colour picker applet for cosmic desktop"
repository = "https://github.com/nalladev/cosmic-applet-color-picker"

[dependencies]
anyhow = "1"
futures-util = "0.3.31"
i18n-embed-fl = "0.10"
image = "0.25"
memmap2 = "0.9"
rust-embed = "8.7.2"
rustix = { version = "1", features = ["fs", "std"] }
tokio = { version = "1.48.0", features = ["full"] }

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
rev = "758c13723fc35b1d82d7fa4f35859c9f7f3c1b0c"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Applet support
    "applet",
    "applet-token",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Add Wayland support to winit
    "wayland",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

[package.metadata.deb]
license-file = "LICENSE"
assets = [
  ["target/release/cosmic-applet-color-picker", "usr/bin/", "755"],
  ["resources/app.desktop", "usr/share/applications/com.github.nalladev.CosmicAppletColorPicker.desktop", "644"],
  ["resources/app.metainfo.xml", "usr/share/appdata/com.github.nalladev.CosmicAppletColorPicker.metainfo.xml", "644"],
  ["resources/icon.svg", "usr/share/icons/hicolor/scalable/apps/com.github.nalladev.CosmicAppletColorPicker.svg", "644"],
]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/cosmic-applet-color-picker", dest = "/usr/bin/cosmic-applet-color-picker", mode = "755" },
  { source = "LICENSE", dest = "/usr/share/doc/cosmic-applet-color-picker/LICENSE", doc = true, mode = "644" },
  { source = "resources/app.desktop", dest = "/usr/share/applications/com.github.nalladev.CosmicAppletColorPicker.desktop", mode = "644" },
  { source = "resources/app.metainfo.xml", dest = "/usr/share/appdata/com.github.nalladev.CosmicAppletColorPicker.metainfo.xml", mode = "644" },
  { source = "resources/icon.svg", dest = "/usr/share/icons/hicolor/scalable/apps/com.github.nalladev.CosmicAppletColorPicker.svg", mode = "644" },
]
