[package]
name = "cosmic-ext-applet-eyedropper"
version = "0.3.2"
edition = "2024"
license = "MPL-2.0"
description = "Eyedropper applet for cosmic desktop. Pick colours from the screen."
repository = "https://github.com/nalladev/cosmic-ext-applet-eyedropper"

[dependencies]
anyhow = "1"
ashpd = "0.12"
futures-util = "0.3.31"
i18n-embed-fl = "0.10"
image = "0.25"
memmap2 = "0.9"
pipewire = "0.8"
rust-embed = "8.7.2"
rustix = { version = "1", features = ["fs", "std"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Applet support
    "applet",
    "applet-token",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Add Wayland support to winit
    "wayland",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

[package.metadata.deb]
license-file = "LICENSE"
assets = [
  ["target/release/cosmic-ext-applet-eyedropper", "usr/bin/", "755"],
  ["resources/app.desktop", "usr/share/applications/io.github.nalladev.CosmicExtAppletEyedropper.desktop", "644"],
  ["resources/app.metainfo.xml", "usr/share/appdata/io.github.nalladev.CosmicExtAppletEyedropper.metainfo.xml", "644"],
  ["resources/icon.svg", "usr/share/icons/hicolor/scalable/apps/io.github.nalladev.CosmicExtAppletEyedropper.svg", "644"],
]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/cosmic-ext-applet-eyedropper", dest = "/usr/bin/cosmic-ext-applet-eyedropper", mode = "755" },
  { source = "LICENSE", dest = "/usr/share/doc/cosmic-ext-applet-eyedropper/LICENSE", doc = true, mode = "644" },
  { source = "resources/app.desktop", dest = "/usr/share/applications/io.github.nalladev.CosmicExtAppletEyedropper.desktop", mode = "644" },
  { source = "resources/app.metainfo.xml", dest = "/usr/share/appdata/io.github.nalladev.CosmicExtAppletEyedropper.metainfo.xml", mode = "644" },
  { source = "resources/icon.svg", dest = "/usr/share/icons/hicolor/scalable/apps/io.github.nalladev.CosmicExtAppletEyedropper.svg", mode = "644" },
]
